<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryLight"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/sunViewID"
            android:layout_width="@dimen/image_size"
            android:layout_height="@dimen/image_size"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/layout_margin"
            android:src="@drawable/sun" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:fontFamily="sans-serif-medium"
            android:padding="@dimen/padding"
            android:text="@string/question_1"
            android:textSize="@dimen/text_size" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:fontFamily="sans-serif-medium"
            android:orientation="vertical"
            android:padding="@dimen/padding">

            <RadioButton
                android:id="@+id/bucharest_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/bucharest"
                android:textSize="@dimen/text_size" />

            <RadioButton
                android:id="@+id/budapest_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/budapest"
                android:textSize="@dimen/text_size" />

            <RadioButton
                android:id="@+id/belgrade_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/belgrade"
                android:textSize="@dimen/text_size" />
        </RadioGroup>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/layout_margin"
            android:onClick="computeScore"
            android:text="@string/submit" />

    </LinearLayout>

</ScrollView>
